[package]
name = "mdbook-superimport"
version = "0.1.0"
authors = ["The Tailwind Developers <frankie@tailwindapp.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.6"
clap = "2.32.0"
env_logger = "0.6.1"
failure = "0.1.5"
lazy_static = "1.3.0"
log = "0.4"
mdbook = "0.2.3"
regex = "1.1.2"
serde_json = "1.0.39"
